--- a/shsems_proj/events/templates/event_create.html
+++ b/shsems_proj/events/templates/event_create.html
@@ -2,7 +2,7 @@
 
 {% load crispy_forms_tags %}
 
-{% block title %} Sign Up {% endblock %}
+{% block title %} New Event {% endblock %}
 
 {% block content %}
 
@@ -10,15 +10,15 @@
   <div class="col-lg-6 mx-auto">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">Sign Up</h4>
+        <h4 class="card-title">Event Details</h4>
         <p class="card-text">
-          Please provide correct info for the following fields.
+          Please provide correct info for a new event.
         </p>
 
         <form method="post">
           {% csrf_token %}
           {{ form | crispy }}
-          <input type="submit" class="btn btn-primary" name="submit" value="Sign Up" />
+          <input type="submit" class="btn btn-primary" name="submit" value="Save" />
         </form>
       </div>
     </div>
