--- a/shsems_proj/events/templates/my_events_list.html
+++ b/shsems_proj/events/templates/my_events_list.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
-{% block title %} All Events {% endblock %}
+{% block title %} My Events {% endblock %}
 {% block content %}
+
+<h1>Events Created</h1>
+
+<a class="btn btn-success" href="{% url 'event_create' %}">Add New Event</a>
+
 <div class="card-columns">
    {% for event in object_list %}
    <div class="card m-3">
