--- a/shsems_proj/registrations/templates/registration_create.html
+++ b/shsems_proj/registrations/templates/registration_create.html
@@ -2,7 +2,7 @@
 
 {% load crispy_forms_tags %}
 
-{% block title %} New Event {% endblock %}
+{% block title %} New Registration {% endblock %}
 
 {% block content %}
 
@@ -10,9 +10,9 @@
   <div class="col-lg-6 mx-auto">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">Event Details</h4>
+        <h4 class="card-title">Registration Details</h4>
         <p class="card-text">
-          Please provide correct info for a new event.
+          Please provide the following document for your registration to proceed.
         </p>
 
         <form method="post" enctype="multipart/form-data">
